# AIVAN

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  idei_my  mcp_schema.json  openai_proxy_checker.py  prometheus_alerts.yml  pyproject.toml  refactor_admin_modules.py  requirements.txt  run_beautiful_bot.py  run_simple_bot.py  test_formatting.py  test_ocr.py  test_pdf_ocr.py  test_retention_notifier.py
.claude/: settings.json
.github/workflows/: ci.yml
data/: judicial_cases_example.jsonl
docs/: ADMIN_ANALYTICS.md  BACKGROUND_TASKS.md  DEPLOYMENT.md  EXCEL_EXPORT.md  PROJECT_VALIDATION.md  QUICKSTART_RAG.md  RAG_SETUP.md  RETENTION_QUICKSTART.md  SCALING.md  security_monitoring.md  voice_mode.md
scripts/: load_judicial_practice.py  run_tests.py  test_rag.py  validate_fixes.py  validate_project.py
src/bot/: document_drafter.py  logging_setup.py  openai_gateway.py  promt.py  ratelimit.py  retention_notifier.py  status_manager.py  stream_manager.py  ui_components.py
src/core/: access.py  app_context.py  attachments.py  audio_service.py  await_status.py  background_tasks.py  bootstrap.py  cache.py  crypto_pay.py  db.py  db_advanced.py  di_container.py  docx_export.py  excel_export.py  exceptions.py  garant_api.py  health.py  launcher.py  main_simple.py  metrics.py  openai_service.py  payments.py  performance.py  progress_ui.py  rich_reply.py  runtime.py  safe_telegram.py  scaling.py  session_store.py  settings.py  subscription_payments.py  subscription_plans.py  user_behavior_tracker.py  validation.py
src/core/admin_modules/: admin_alerts_commands.py  admin_analytics.py  admin_behavior_commands.py  admin_cohort_commands.py  admin_commands.py  admin_formatters.py  admin_pmf_commands.py  admin_retention_commands.py  admin_revenue_commands.py  admin_utils.py  automated_alerts.py  cohort_analytics.py  pmf_metrics.py  retention_analytics.py  revenue_analytics.py
src/core/bot_app/: __init__.py  admin.py  app.py  common.py  context.py  documents.py  feedback.py  formatting.py  hints.py  logging_setup.py  menus.py  openai_gateway.py  payments.py  promt.py  questions.py  ratelimit.py  retention.py  retention_notifier.py  startup.py  stats.py  status_manager.py  stream_manager.py  typing_indicator.py  ui_components.py  voice.py
src/core/data/: aivan.db  bot.sqlite3  bot.sqlite3-shm  bot.sqlite3-wal
src/core/data/documents/5282041923/: 20250928_182811_image_ocr.txt  20250928_193930_image_ocr.txt  20250928_194731_photo_2025-09-11_08-45-36_ocr.txt  20250928_203943_Microsoft_Word.docx  20250928_210458_photo_AgACAgEAAxkBAAIEJ2jZcva7vmNUAAEkbviY0y85gqLSFAACEwtrG0V30UaaIT_O8inD1gEAAwIAA3kAAzYE_ocr.txt  20250928_210538_photo_AgACAgEAAxkBAAIEFGjZZSz2WX5x3j-ythdcZ7ZSjPz9AAIMC2sbRXfRRmcya2ANVIDiAQADAgADeQADNgQ_ocr.txt  20250928_211111_image_ocr.txt  20250928_211415_photo_AgACAgEAAxkBAAIEJ2jZcva7vmNUAAEkbviY0y85gqLSFAACEwtrG0V30UaaIT_O8inD1gEAAwIAA3kAAzYE_ocr.txt  20250928_221654_photo_AgACAgEAAxkBAAIEcGjZiaNpJNmMBF_IVWDwQIRijlR-AAInC2sbRXfRRpeOFvqc15puAQADAgADeQADNgQ_ocr.txt  20251001_190935_376_737_.docx
src/core/middlewares/: error_middleware.py
src/core/rag/: __init__.py  embedding_service.py  judicial_rag.py  vector_store.py
src/core/simple_bot/: admin.py  app.py  common.py  context.py  documents.py  feedback.py  menus.py  payments.py  questions.py  retention.py  startup.py  stats.py  voice.py
src/documents/: __init__.py  anonymizer.py  base.py  document_chat.py  document_drafter.py  document_manager.py  lawsuit_analyzer.py  ocr_converter.py  risk_analyzer.py  storage_backends.py  summarizer.py  translator.py  utils.py
src/telegram_legal_bot/: __init__.py  config.py  healthcheck.py  main.py  ratelimit.py
telegram_legal_bot/: .env.example  config.py  constants.py  main.py  promt.py
telegram_legal_bot/handlers/: __init__.py  legal_query.py  start.py  ui_demo.py
telegram_legal_bot/middlewares/: request_context.py
telegram_legal_bot/services/: __init__.py  openai_service.py
telegram_legal_bot/ui/: __init__.py  animations.py  keyboards.py  messages.py  user_profile.py
telegram_legal_bot/utils/: __init__.py  markdown_v2.py  message_formatter.py  pro_logging.py  rate_limiter.py
tests/: conftest.py  test_document_caption.py  test_formatting_full.py  test_logging_setup.py  test_payment_idempotency.py  test_progress_status.py  test_render.py  test_render_formatting.py  test_retention_notifier.py  test_safe_telegram.py  test_security_monitoring.py  test_streaming.py  test_telegram_formatter.py  test_telegram_legal_bot.py  test_voice_mode.py  test_welcome_media.py
tests/unit/: test_access_service.py  test_db_advanced.py  test_di_container.py  test_document_manager.py  test_garant_api.py  test_health_checks.py  test_payment_providers.py  test_payments.py  test_subscription_payments.py
webapp/: .eslintrc.json  .gitignore  INTEGRATION.md  LegalAIPro.jsx  README.md  index.html  package.json  tailwind.config.js  vite.config.js
webapp/src/: index.css  main.jsx
