[tool.poetry]
name = "telegram-legal-bot"
version = "0.1.0"
description = "Telegram bot for legal consultations powered by OpenAI GPT"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

# Пакуем проект из каталога src/
# Если в коде всё ещё есть импорты вида `src.core...`, временно оставляем второй include.
packages = [
  { include = "telegram_legal_bot", from = "src" },
  { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"

# Core
aiogram = ">=3.4.0,<4.0.0"
openai = "^1.40"
httpx = { version = "^0.27", extras = ["http2"] }
python-dotenv = "^1.0.1"
aiohttp-socks = "^0.10.1"
requests = "^2.32.5"

# Документы / экспорт
PyPDF2 = "^3.0.1"
pdfplumber = "^0.11.4"
python-docx = "^1.1.0"
reportlab = "^4.2.0"

# Стек "распознание текста" (обновлённый под новый модуль, без Tesseract/ocrmypdf/pdf2image)
Pillow = "^10.4.0"
paddlepaddle = "^2.6.0"         # для GPU вместо этого ставьте paddlepaddle-gpu подходящей версии
paddleocr = "^2.8.0"
pymupdf = "^1.26.4"
numpy = ">=2,<2.3"

# База/кэш/метрики (частично опциональные)
aiosqlite = "^0.20.0"
redis = { version = "^5.0.6", optional = true }
prometheus-client = { version = "^0.20.0", optional = true }
psutil = { version = "^5.9.0", optional = true }
pydantic = "^2.5.0"

# Тесты
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
setuptools = "^80.9.0"
qdrant-client = "^1.15.1"
openpyxl = "^3.1.5"

[tool.poetry.extras]
# Группы для удобной установки "по профилям"
prod = ["redis", "prometheus-client", "psutil", "pydantic"]
monitoring = ["prometheus-client", "psutil"]
scaling = ["redis", "pydantic"]
full = ["redis", "prometheus-client", "psutil", "pydantic"]

[tool.poetry.scripts]
telegram-legal-bot = "telegram_legal_bot.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.10.0"
types-redis = "^4.6.0.20240425"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# --- стиль кода ---
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E","F","I","W","UP","N","B","PL"]
ignore = ["E501"]
