[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "telegram-legal-bot"
version = "0.1.0"
description = "Telegram bot for legal consultations powered by OpenAI GPT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
authors = [{ name = "AIVAN Team", email = "support@aivan.ai" }]
keywords = ["telegram", "bot", "legaltech", "ai"]
dependencies = [
    "aiogram>=3.4.0,<4.0.0",
    "openai>=1.40.0,<2.0.0",
    "httpx[http2]>=0.27.0,<0.28.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "aiohttp-socks>=0.10.1,<0.11.0",
    "requests>=2.32.5,<3.0.0",
    "PyPDF2>=3.0.1,<4.0.0",
    "pdfplumber>=0.11.4,<0.12.0",
    "python-docx>=1.1.0,<2.0.0",
    "reportlab>=4.2.0,<5.0.0",
    "Pillow>=10.4.0,<11.0.0",
    "paddlepaddle>=2.6.0,<3.0.0",
    "paddleocr>=2.8.0,<3.0.0",
    "pymupdf>=1.26.4,<2.0.0",
    "numpy>=2.0.0,<2.3.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "qdrant-client>=1.15.1,<2.0.0",
    "openpyxl>=3.1.5,<4.0.0",
]

[project.optional-dependencies]
prod = ["redis>=5.0.6,<6.0.0", "prometheus-client>=0.20.0,<0.21.0", "psutil>=5.9.0,<6.0.0"]
monitoring = ["prometheus-client>=0.20.0,<0.21.0", "psutil>=5.9.0,<6.0.0"]
scaling = ["redis>=5.0.6,<6.0.0"]
full = ["redis>=5.0.6,<6.0.0", "prometheus-client>=0.20.0,<0.21.0", "psutil>=5.9.0,<6.0.0"]

[project.scripts]
telegram-legal-bot = "telegram_legal_bot.main:main"

[tool.poetry]
package-mode = true
packages = [
  { include = "telegram_legal_bot", from = "src" },
  { include = "src", from = "." }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.10.0"
types-redis = "^4.6.0.20240425"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
setuptools = "^80.9.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.core.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.documents.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.bot.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
